<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="by.ales.android.yarg.MainActivity">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/main_pager_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" >

            <android.support.design.widget.TabItem
                android:layout_height="@dimen/main_tab_layout_tab_height"
                android:layout_width="@dimen/main_tab_layout_tab_width"
                android:text="@string/main_tab_layout_tab_numbers"/>
            <android.support.design.widget.TabItem
                android:layout_height="@dimen/main_tab_layout_tab_height"
                android:layout_width="@dimen/main_tab_layout_tab_width"
                android:text="@string/main_tab_layout_tab_lists"/>
            <android.support.design.widget.TabItem
                android:layout_height="@dimen/main_tab_layout_tab_height"
                android:layout_width="@dimen/main_tab_layout_tab_width"
                android:text="@string/main_tab_layout_tab_dices"/>

        </android.support.design.widget.TabLayout>

    </android.support.v4.view.ViewPager>

</RelativeLayout>
